# agent

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
docs/: DESIGN_PATTERNS.md  MCP_TOOLS.md
scripts/: debug_tool.py  test_single_tool.py
src/industrial_agent/: __init__.py  main.py
src/industrial_agent/agent/: __init__.py  agent.py  models.py  prompts.py
src/industrial_agent/config/: settings.py
src/industrial_agent/mcp_server/: __init__.py  server.py
src/industrial_agent/mcp_server/tools/: __init__.py  annotation_tools.py  chart_generator.py  data_analysis.py  data_query.py  mysql_query.py  yolo_training.py
tests/: __init__.py
